--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -1,4 +1,4 @@
-@use "../../variables.scss";
+@use "../../styles/variables.scss";
 
 .movie-details {
   background-color: variables.$app-background;
