Combine all components in MovieListPage

--- a/src/components/MovieListPage/MovieListPage.scss
+++ b/src/components/MovieListPage/MovieListPage.scss
@@ -3,6 +3,12 @@
   gap: 20px;
   padding: 1rem;
   margin: 0 auto;
-  background-color: green;
   grid-template-columns: repeat(auto-fit, minmax(500px, max-content));
+}
+
+.genre-sort {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
 }
