--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,6 @@
-@use "src/styles/variables.scss";
-@use "src/styles/media-queries.scss";
+// @use "../../styles/variables.scss";
+@use "../../styles/variables.scss";
+@use "../../styles/media-queries.scss";
 
 .header {
   color: variables.$app-white;
