--- a/src/components/Header/SearchBar/SearchBar.scss
+++ b/src/components/Header/SearchBar/SearchBar.scss
@@ -1,5 +1,5 @@
-@use "src/styles/variables.scss";
-@use "src/styles/media-queries.scss";
+@use "../../../styles/variables.scss";
+@use "../../../styles/media-queries.scss";
 
 .searchbar {
   width: 75%;
